# phot7ds

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_run.py
examples/config/: 7ds.swarp  7ds_sepp.config  README.md  column_convention.md
phot7ds/: __init__.py  _logging.py  batch.py  calibration.py  config.py  config_io.py  depth.py  diagnostics.py  filters.py  images.py  pipeline.py  presets.py  schema.py  sepp.py  tile_geometry.py
phot7ds/detection/: __init__.py  delve.py
tests/: test_smoke.py
