[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "phot7ds"
version = "0.2.0"
description = "Multi-band photometric catalog pipeline for the 7DS survey (RIS / WFS / IMS)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Mankeun Jeong" }]
keywords = ["astronomy", "photometry", "7DS", "source-extractor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "astropy",
    "pandas",
    "scipy",
    "matplotlib",
    "requests",
    "pyvo",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/jmk5040/phot7ds"
Repository = "https://github.com/jmk5040/phot7ds"

[tool.setuptools.packages.find]
where = ["."]
include = ["phot7ds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
